--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Tumeric web app" />
+		<meta name="description" content="TUMERIC web app" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>TUMERIC</title>
 	</head>
