--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,9 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="site web app" />
+		<meta name="description" content="cite web app" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>SITE</title>
+		<title>CITE</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
